--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">XML with Compose</string>
     <string name="fragment_list">Фрагментный список</string>
+    <string name="fragment_list_swiper">Фрагментный список Swiper</string>
     <string name="compose_list">Compose список</string>
 </resources>
